--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,5 +1,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="keywords" content="peer-to-peer,cryptoexchange,crypto,Bitcoin,dash,litecoin,Bitcoin-cash,no fees,fast,secure"/>
+<meta name="description" content="crypton is a peer-to-peer cryptocurrency exchange site supporting multiple coins.Its fast secure and no hidden fees"/>
+<meta name="subject" content="peer to peer cryptocurrency exchange">
+<meta name="copyright"content="crypton">
+<meta name="robots" content="index,follow" />
+<meta name="abstract" content="">
+<meta name="topic" content="peer to peer cryptocurrency exchange">
+<meta name="summary" content="start exchanging cryptocurrency now with no hidden fees">
+<meta name="Classification" content="Business">
+<meta name="url" content="https://crypton.youtgram.live">
+<meta name="identifier-URL" content="https://crypton.youtgram.live">
+<meta name="coverage" content="Worldwide">
+<meta name="distribution" content="Global">
+<meta http-equiv="Expires" content="0">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Cache-Control" content="no-cache">
+
+<meta name="og:title" content="Crypton"/>
+<meta name="og:type" content="peer to peer cryptocurrency exchange"/>
+<meta name="og:url" content="https://crypton.youtgram.live"/>
+<meta name="og:image" content="https://crypton.youtgram.live/images/ex.jpg"/>
+<meta name="og:site_name" content="crypton"/>
+<meta name="og:description" content="crypton is a peer-to-peer cryptocurrency exchange site supporting multiple coins.Its fast secure and no hidden fees"/>
+
 <title>{{title}}</title>
+<link rel="canonical" href="https://crypton.youtgram.live" />
 <link rel="icon" type="image/png" href="/images/exchange.png" />
     <link rel="stylesheet" href="/light/styles/bootstrap.css">
     <link rel="stylesheet" href="/light/styles/plugins.css">
@@ -11,6 +36,57 @@
     <link rel="stylesheet" href="/light/styles/components/cards/card.css">
     <link rel="stylesheet" href="/light/styles/elements/tooltip.css">
     <link rel="stylesheet" href="/light/styles/override.css">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KQT4BL2BCJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KQT4BL2BCJ');
+</script>
+
+
+
+<ol itemscope itemtype="https://schema.org/BreadcrumbList" class="d-none">
+  <li itemprop="itemListElement" itemscope
+      itemtype="https://schema.org/ListItem">
+    <a itemprop="item" href="https://crypton.youtgram.live/signup">
+      <span itemprop="name">signup</span></a>
+    <meta itemprop="position" content="1" />
+  </li>
+  ›
+  <li itemprop="itemListElement" itemscope
+      itemtype="https://schema.org/ListItem">
+    <a itemscope itemtype="https://schema.org/WebPage"
+       itemprop="item" itemid="https://crypton.youtgram.live/login"
+       href="https://example.com/books/sciencefiction">
+      <span itemprop="name">login</span></a>
+    <meta itemprop="position" content="2" />
+  </li>
+  ›
+  <li itemprop="itemListElement" itemscope
+      itemtype="https://schema.org/ListItem">
+    <a itemprop="item" href="https://crypton.youtgram.live/dashboard">
+      <span itemprop="name">Dashboard</span></a>
+    <meta itemprop="position" content="3" />
+  </li>
+</ol>
+<ol itemscope itemtype="https://schema.org/BreadcrumbList">
+  <li itemprop="itemListElement" itemscope
+      itemtype="https://schema.org/ListItem">
+    <a itemprop="item" href="https://crypton.youtgram.live/buy_coin">
+      <span itemprop="name">Buy crypto</span></a>
+    <meta itemprop="position" content="1" />
+  </li>
+  ›
+  <li itemprop="itemListElement" itemscope
+      itemtype="https://crypton.youtgram.live/sell_coin">
+    <span itemprop="name">Sell coin</span>
+    <meta itemprop="position" content="2" />
+  </li>
+</ol>
 
     <nav class="navbar navbar-expand-lg fixed-top pt-3 pb-3 bg-white">
             <a class="navbar-brand mr-5" href="/">
