--- a/resources/views/admin/dashboard.edge
+++ b/resources/views/admin/dashboard.edge
@@ -89,8 +89,8 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
                   </div>
                   <div class="media-body">
-                    <h6 class="tx-inverse">Messages</h6>
-                    <p class="mg-b-0">4 New Messages</p>
+                    <h6 class="tx-inverse">Alert!</h6>
+                    <p class="mg-b-0">coming soon</p>
                   </div>
                 </div>
               </li>
