--- a/resources/views/dashboard/referral.edge
+++ b/resources/views/dashboard/referral.edge
@@ -6,11 +6,11 @@
   <div class="layout-px-spacing">
     <div class="layout-top-spacing">
       <div class="col-lg-12 col-12 layout-spacing">
-        <blockquote class="blockquote text-center overflow-hidden">
+        <blockquote class="blockquote text-center overflow-hidden mt-5">
           <h5>Refer friends and earn</h5>
-          <p>Get 15% of what your referral deposits to the system</p>
+          <p>Get 15% of what your referral deposits to the system and <b>0.00001</b> Per coin</p>
           <p>Start inviting friends now by using the link below
-          <img src="/images/20943954.jpg" class="rounded mx-auto d-block" width="400px" height="400px">
+          <img src="/images/20943954.jpg" class="rounded mx-auto d-block mt-5" width="400px" height="400px">
           <div class="input-group mt-5">
             <input type="text" class="form-control" id="address" value="{{link}}" readonly>
             <div class="input-group-append">
