--- a/resources/views/landing/signup.edge
+++ b/resources/views/landing/signup.edge
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
+  @if(msg)
+  <meta name="description" content="Get 15% of what your referral deposits to the system and 0.00001 Per coin"/>
+  @endeach
   <title>{{title}}</title>
   <link rel="icon" type="image/png" href="/images/exchange.png" />
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
@@ -31,12 +34,30 @@
     <div class="form-form-wrap">
       <div class="form-container">
         <div class="form-content">
+          @if(msg)
+          <div class="alert alert-arrow-right alert-icon-right alert-light-warning mb-4"
+               role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><svg> ... </svg></button>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info"><circle cx="12" cy="12" r="10"/><line x1="12" y1="16" x2="12" y2="12"/><line x1="12" y1="8" x2="12.01" y2="8"/></svg>
+            <strong>Alert!</strong> You have been invited by <b>{{msg.user}}</b> Register now and start inviting your friends to earn more.
+          </div>
+          @endif
+
           <h1 class="">Register</h1>
           <p class="signup-link register">Already have an account? <a href="/login">Log in</a></p>
           <form class="text-left">
             <div class="form">
               <div id="error"></div>
               {{ csrfField() }}
+              <!--referral-->
+              @if(msg)
+              <div class="field-wrapper input d-none">
+                <label for="username">Referral</label>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+                <input name="ref"  class="form-control" value="{{msg.user}}">
+              </div>
+              @endif
+
               <div id="username-field" class="field-wrapper input">
                 <label for="username">USERNAME</label>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
@@ -54,6 +75,7 @@
                   <label for="password">PASSWORD</label>
                   <a href="auth_pass_recovery_boxed.html" class="forgot-pass-link">Forgot Password?</a>
                 </div>
+
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
                 <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
