--- a/resources/views/landing/signup.edge
+++ b/resources/views/landing/signup.edge
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
   @if(msg)
   <meta name="description" content="Get 15% of what your referral deposits to the system and 0.00001 Per coin"/>
-  @endeach
+  @endif
   <title>{{title}}</title>
   <link rel="icon" type="image/png" href="/images/exchange.png" />
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
