--- a/resources/views/partials/footer.edge
+++ b/resources/views/partials/footer.edge
@@ -143,4 +143,4 @@
 
 <script src="/light/plugins/blockui/custom-blockui.js"></script>
 <script src="/online/o.js"></script>
-
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="2e9c8aa4-dd66-415e-b159-5c2d3452483c";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
