added some coins

--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -308,6 +308,12 @@
             <li>
               <a href="/walletltc">Ltc</a>
             </li>
+            <li>
+              <a href="/walletusdt">Usdt</a>
+            </li>
+            <li>
+              <a href="/walletbnb">Bnb</a>
+            </li>
           </ul>
         </li>
 
