--- a/resources/views/dashboard/index.edge
+++ b/resources/views/dashboard/index.edge
@@ -91,6 +91,56 @@
                 </div>
             </div>
 
+<!--usdt-->
+             <div class="col-xl-4 col-lg-12 col-md-6 col-sm-12 col-12 layout-spacing">
+                            <div class="widget-one" style="background: #00CF91">
+                                <div class="widget-content">
+                                    <div class="w-numeric-value">
+                                        <div class="w-icon">
+                                          <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 339.43 295.27"><title>tether-usdt-logo</title><path d="M62.15,1.45l-61.89,130a2.52,2.52,0,0,0,.54,2.94L167.95,294.56a2.55,2.55,0,0,0,3.53,0L338.63,134.4a2.52,2.52,0,0,0,.54-2.94l-61.89-130A2.5,2.5,0,0,0,275,0H64.45a2.5,2.5,0,0,0-2.3,1.45h0Z" style="fill:#50af95;fill-rule:evenodd"/><path d="M191.19,144.8v0c-1.2.09-7.4,0.46-21.23,0.46-11,0-18.81-.33-21.55-0.46v0c-42.51-1.87-74.24-9.27-74.24-18.13s31.73-16.25,74.24-18.15v28.91c2.78,0.2,10.74.67,21.74,0.67,13.2,0,19.81-.55,21-0.66v-28.9c42.42,1.89,74.08,9.29,74.08,18.13s-31.65,16.24-74.08,18.12h0Zm0-39.25V79.68h59.2V40.23H89.21V79.68H148.4v25.86c-48.11,2.21-84.29,11.74-84.29,23.16s36.18,20.94,84.29,23.16v82.9h42.78V151.83c48-2.21,84.12-11.73,84.12-23.14s-36.09-20.93-84.12-23.15h0Zm0,0h0Z" style="fill:#fff;fill-rule:evenodd"/></svg>     </div>
+                                        <div class="w-content">
+                                            <span class="w-value" id="ltc">{{ltc.value}}</span>
+                                            <span class="w-numeric-title">Tether</span>
+                                        </div>
+                                    </div>
+                                    <div class="w-chart">
+                                        <div id="total-orders5"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--bnb-->
+                         <div class="col-xl-4 col-lg-12 col-md-6 col-sm-12 col-12 layout-spacing">
+                                        <div class="widget-one" style="background: linear-gradient(to right,#FBFF00,#FFF851)">
+                                            <div class="widget-content">
+                                                <div class="w-numeric-value">
+                                                    <div class="w-icon">
+                                                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="katman_1" x="0px" y="0px" viewBox="0 0 3730.2 2770.2" style="enable-background:new 0 0 3730.2 2770.2;" xml:space="preserve">
+<style type="text/css">
+  .st0{fill:#F3BA2F;}
+</style>
+                                                        <g id="Layer_2">
+                                                          <g id="Layer_1-2">
+                                                            <path class="st0" d="M1379.6,1185.6l485.5-485.5l485.8,485.7l282.5-282.5l-768.3-768.2l-768,768L1379.6,1185.6 M615.1,1385.1    l282.5-282.5l282.5,282.5l-282.5,282.5L615.1,1385.1z M1379.6,1584.6l485.5,485.5l485.7-485.7l282.7,282.3l-0.1,0.2l-768.3,768.2    l-768-768l-0.4-0.4L1379.6,1584.6 M2550.1,1385.2l282.5-282.5l282.5,282.5l-282.5,282.5L2550.1,1385.2z"/>
+                                                            <path class="st0" d="M2151.6,1385h0.1l-286.6-286.7l-211.9,211.8l0,0l-24.3,24.3l-50.2,50.2l-0.4,0.4l0.4,0.4l286.4,286.5    l286.7-286.7l0.1-0.2L2151.6,1385"/>
+                                                          </g>
+                                                        </g>
+</svg>   </div>
+                                                    <div class="w-content">
+                                                        <span class="w-value" id="ltc">{{ltc.value}}</span>
+                                                        <span class="w-numeric-title">Binance Coin</span>
+                                                    </div>
+                                                </div>
+                                                <div class="w-chart">
+                                                    <div id="total-orders6"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+
             <div class="col-xl-4 col-lg-12 col-md-6 col-sm-12 col-12 layout-spacing">
               <div class="widget widget-table-two">
 
@@ -188,9 +238,93 @@
                         </div>
                     </div>
                 </div>
+
+
+
+          <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
+            <div class="widget widget-activity-four">
+              <div class="widget-heading">
+                <h5 class="">Recent Activities</h5>
+              </div>
+
+              <div class="widget-content">
+                <div class="mt-container mx-auto">
+                  <div class="timeline-line">
+                    <!-- activities -->
+                    @if(notifications.length!==0)
+                      @each(notification in notifications)
+                      @if(notification.status==='completed')
+                        <div class="item-timeline timeline-success">
+                          <div class="t-dot" data-original-title="" title="">
+                          </div>
+                          <div class="t-text">
+                            <p>{{notification.msg}}</p>
+                            <span class="badge badge-success">{{notification.status}}</span>
+                            <p class="t-time">{{fromNow(notification.created_at);}}</p>
+                          </div>
+                        </div>
+                      @elseif(notification.status==='pending')
+                        <div class="item-timeline timeline-warning">
+                          <div class="t-dot" data-original-title="" title="">
+                          </div>
+                          <div class="t-text">
+                            <p>{{notification.msg}}</p>
+                            <span class="badge badge-warning">{{notification.status}}</span>
+                            <p class="t-time">{{fromNow(notification.created_at);}}</p>
+                          </div>
+                        </div>
+                      @elseif(notification.status==='cancelled')
+                        <div class="item-timeline timeline-danger">
+                          <div class="t-dot" data-original-title="" title="">
+                          </div>
+                          <div class="t-text">
+                            <p>{{notification.msg}}</p>
+                            <span class="badge badge-danger">{{notification.status}}</span>
+                            <p class="t-time"></p>
+                          </div>
+                        </div>
+                      @elseif(notification.status==='progress')
+                        <div class="item-timeline timeline-primary">
+                          <div class="t-dot" data-original-title="" title="">
+                          </div>
+                          <div class="t-text">
+                            <p>{{notification.msg}}</p>
+                            <span class="badge badge-primary"><a class="text-white" href="{{url+'/chat'}}/{{notification.trade_link}}">{{notification.status}}</a></span>
+                            <p class="t-time">{{fromNow(notification.created_at);}}</p>
+                          </div>
+                        </div>
+                      @else
+                        <div class="item-timeline timeline-dark">
+                          <div class="t-dot" data-original-title="" title="">
+                          </div>
+                          <div class="t-text">
+                            <p>{{notification.msg}}</p>
+                            <span class="badge badge-dark"><a class="text-white" href="{{url+'/chat'}}/{{notification.trade_link}}">{{notification.status}}</a></span>
+                            <p class="t-time">{{fromNow(notification.created_at);}}</p>
+                          </div>
+                        </div>
+                      @endif
+                      @endeach
+                    @else
+                      <div class="infobox-2">
+                        <div class="info-icon text-center mt-5">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-frown"><circle cx="12" cy="12" r="10"></circle><path d="M16 16s-1.5-2-4-2-4 2-4 2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
+
+                        </div>
+                      </div>
+                    @endif
+                  </div>
+                </div>
+              </div>
+              <div class="tm-action-btn">
+                <button class="btn">View All <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg></button>
+              </div>
+            </div>
+          </div>
+
+
             </div>
       <div class="row layout-top-spacing">
-
         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
 
           <div class="widget widget-account-invoice-one">
@@ -212,87 +346,6 @@
 
           </div>
         </div>
-
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
-                <div class="widget widget-activity-four">
-                    <div class="widget-heading">
-                        <h5 class="">Recent Activities</h5>
-                    </div>
-
-                    <div class="widget-content">
-                        <div class="mt-container mx-auto">
-                            <div class="timeline-line">
-                              <!-- activities -->
-                             @if(notifications.length!==0)
-                              @each(notification in notifications)
-                              @if(notification.status==='completed')
-                                <div class="item-timeline timeline-success">
-                                    <div class="t-dot" data-original-title="" title="">
-                                    </div>
-                                    <div class="t-text">
-                                        <p>{{notification.msg}}</p>
-                                        <span class="badge badge-success">{{notification.status}}</span>
-                                        <p class="t-time">{{fromNow(notification.created_at);}}</p>
-                                    </div>
-                                </div>
-                             @elseif(notification.status==='pending')
-                              <div class="item-timeline timeline-warning">
-                                <div class="t-dot" data-original-title="" title="">
-                                </div>
-                                <div class="t-text">
-                                  <p>{{notification.msg}}</p>
-                                  <span class="badge badge-warning">{{notification.status}}</span>
-                                  <p class="t-time">{{fromNow(notification.created_at);}}</p>
-                                </div>
-                              </div>
-                              @elseif(notification.status==='cancelled')
-                              <div class="item-timeline timeline-danger">
-                                <div class="t-dot" data-original-title="" title="">
-                                </div>
-                                <div class="t-text">
-                                  <p>{{notification.msg}}</p>
-                                  <span class="badge badge-danger">{{notification.status}}</span>
-                                  <p class="t-time"></p>
-                                </div>
-                              </div>
-                              @elseif(notification.status==='progress')
-                              <div class="item-timeline timeline-primary">
-                                <div class="t-dot" data-original-title="" title="">
-                                </div>
-                                <div class="t-text">
-                                  <p>{{notification.msg}}</p>
-                                  <span class="badge badge-primary"><a class="text-white" href="{{url+'/chat'}}/{{notification.trade_link}}">{{notification.status}}</a></span>
-                                  <p class="t-time">{{fromNow(notification.created_at);}}</p>
-                                </div>
-                              </div>
-                              @else
-                              <div class="item-timeline timeline-dark">
-                                <div class="t-dot" data-original-title="" title="">
-                                </div>
-                                <div class="t-text">
-                                  <p>{{notification.msg}}</p>
-                                  <span class="badge badge-dark"><a class="text-white" href="{{url+'/chat'}}/{{notification.trade_link}}">{{notification.status}}</a></span>
-                                  <p class="t-time">{{fromNow(notification.created_at);}}</p>
-                                </div>
-                              </div>
-                              @endif
-                              @endeach
-                              @else
-                              <div class="infobox-2">
-                                <div class="info-icon text-center mt-5">
-                                  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-frown"><circle cx="12" cy="12" r="10"></circle><path d="M16 16s-1.5-2-4-2-4 2-4 2"></path><line x1="9" y1="9" x2="9.01" y2="9"></line><line x1="15" y1="9" x2="15.01" y2="9"></line></svg>
-
-                                </div>
-                              </div>
-                              @endif
-                            </div>
-                        </div>
-                    </div>
-                        <div class="tm-action-btn">
-                            <button class="btn">View All <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg></button>
-                        </div>
-                    </div>
-                </div>
 
         <!--summary -->
         <div class="col-xl-4 col-lg-12 col-md-6 col-sm-12 col-12 layout-spacing">
@@ -1014,12 +1067,15 @@
       var bch=new ApexCharts(document.querySelector("#total-orders2"), bchoptions);
       var dash=new ApexCharts(document.querySelector("#total-orders3"), dashoptions);
       var ltc=new ApexCharts(document.querySelector("#total-orders4"), ltcoptions);
+        var tether=new ApexCharts(document.querySelector("#total-orders5"), ltcoptions);
+        var bnb=new ApexCharts(document.querySelector("#total-orders6"), ltcoptions);
 
       bch.render();
       dash.render();
       ltc.render();
-
       btc.render();
+      tether.render();
+      bnb.render()
 
 
       /*
@@ -1097,11 +1153,26 @@
           url:'https://api.exchangerate.host/convert?from=DASH&to=USD&amount={{eth.value}}',
           dataType:'json',
         }),
-      ).then( function(btc,bch,ltc,dash){
-        const totalAssestsValue=btc[0].result+bch[0].result+ltc[0].result+dash[0].result
+
+        //tether
+        $.ajax({
+          type:'get',
+          url:'https://api.exchangerate.host/convert?from=USDT&to=USD&amount={{eth.value}}',
+          dataType:'json',
+        }),
+
+        //bnb
+        $.ajax({
+          type:'get',
+          url:'https://api.exchangerate.host/convert?from=BNB&to=USD&amount={{eth.value}}',
+          dataType:'json',
+        }),
+
+      ).then( function(btc,bch,ltc,dash,tether,bnb){
+        const totalAssestsValue=btc[0].result+bch[0].result+ltc[0].result+dash[0].result+tether[0].result+bnb[0].result
         setTimeout(function (){
           $.unblockUI();
-          $('#b_container .invoice-box').prepend('<div class="acc-total-info"> <h5>Balance</h5> <p class="acc-amount">$'+Math.round(totalAssestsValue)+'</p> </div> <div class="inv-detail"> <div class="info-detail-1"> <p class="text-warning">Bitcoin</p> <p class="text-warning">$ '+Math.round(btc[0].result)+'</p> </div> <div class="info-detail-2"> <p class="text-success">Bitcoin cash</p> <p class="text-success">$'+Math.round(bch[0].result)+'</p> </div> <div class="info-detail-3 info-sub"> <div class="info-detail"> <p class="text-info">Dash</p> <p class="text-info">$ '+Math.round(dash[0].result)+'</p> </div> <div class="info-detail mt-3"> <p class="text-dark">Litecoin</p> <p class="text-dark">$ '+Math.round(ltc[0].result)+'</p> </div> </div>')
+          $('#b_container .invoice-box').prepend('<div class="acc-total-info"> <h5>Balance</h5> <p class="acc-amount">$'+Math.round(totalAssestsValue)+'</p> </div> <div class="inv-detail"> <div class="info-detail-1"> <p class="text-warning">Bitcoin</p> <p class="text-warning">$ '+Math.round(btc[0].result)+'</p> </div> <div class="info-detail-2"> <p class="text-success">Bitcoin cash</p> <p class="text-success">$'+Math.round(bch[0].result)+'</p> </div> <div class="info-detail-3 info-sub"> <div class="info-detail"> <p class="text-info">Dash</p> <p class="text-info">$ '+Math.round(dash[0].result)+'</p> </div> <div class="info-detail mt-3"> <p class="text-dark">Litecoin</p> <p class="text-dark">$ '+Math.round(ltc[0].result)+'</p> </div> <div class="info-detail mt-3"> <p class="text-dark">Tether</p> <p style="color: #00CF91">$ '+Math.round(tether[0].result)+'</p> </div> <div class="info-detail mt-3"> <p style="color: #FBFF00">Binance coin</p> <p class="text-dark">$ '+Math.round(bnb[0].result)+'</p> </div> </div>')
         },3000);
 
         })
